# labeldesk

./: .dockerignore  .gitignore  .labeldesk_cache.db  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  labeldesk.yaml.example  main.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
core/models/: __init__.py  categories.py  result.py  text_adapter_mixin.py
labeldesk/: __main__.py
labeldesk/cli/: main.py
labeldesk/core/: config.py  paths.py
labeldesk/pipeline/: __init__.py  batcher.py  cache.py  classifier.py  hasher.py  normalizer.py  ocr.py  runner.py  signals.py
labeldesk/tui/: app.py
labeldesk/web/: app.py
pipeline/: __init__.py  batcher.py  cache.py  classifier.py  hasher.py  ocr.py  runner.py  signals.py
tests/: conftest.py  test_batcher.py  test_cache.py  test_categories.py  test_classifier.py  test_cli.py  test_config.py  test_formatters.py  test_hasher.py  test_job_store.py  test_normalizer.py  test_ocr.py  test_paths.py  test_registry.py  test_result.py  test_runner.py  test_schema.py  test_signals.py  test_tui.py
web/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: key-dialog.tsx  model-dropdown.tsx  model-picker.tsx  ui.tsx
web/lib/: api.ts  types.ts
www/: index.md  package.json
www/.vitepress/: config.mjs
www/guide/: architecture.md  deployment.md  getting-started.md  installation.md  schema.md  web.md
www/providers/: anthropic.md  gemini.md  groq.md  index.md  lightning.md  ollama.md  openai.md
(+22 files in other folders)
